--- a/app/signUp/UserCreate/view.html
+++ b/app/signUp/UserCreate/view.html
@@ -52,7 +52,7 @@
           </div>
           <div class="form-group">
             <input type="{{showpassword ? 'text' : 'password'}}" name="password" class="form-control" id="pwd" placeholder="Password" required ng-model="$ctrl.password" ng-keypress="$ctrl.userCreateFormInit.password=0">
-            <span class="fix-right"><i class="fa fa-eye fa-2x" ng-model="showpassword"></i></span>
+            <span class="fix-right"><i id="showpassword" class="fa fa-eye-slash fa-2x" ng-model="showpassword" ng-click="$ctrl.showpassword();"></i></span>
             <span ng-show="$ctrl.userCreateForm.password.$error.required && ($ctrl.userCreateFormInit.password===0)" ng-init="$ctrl.pwdRequiredTxt='Required'" class="help-block">Required</span>
             <span ng-show="($ctrl.userCreateFormInit.password===0)&& $ctrl.pwdRequiredTxt!='Required' && $ctrl.userCreateForm.password.$error.required!=true" class="help-block">{{$ctrl.pwdRequiredTxt}}</span>
 
